--- a/public/offline.html
+++ b/public/offline.html
@@ -1,11 +1,28 @@
+<!-- public/offline.html -->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Offline</title>
+    <title>You're Offline</title>
+    <link rel="stylesheet" href="/globals.css" />
+    <style>
+      body {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        text-align: center;
+        background: #111;
+        color: #eee;
+        font-family: "Nunito Sans", sans-serif;
+      }
+    </style>
   </head>
   <body>
-    <h1>You are offline</h1>
-    <p>Some features may not work.</p>
+    <div>
+      <img src="/icon-192.png" alt="UHI Skill Share" width="100" />
+      <h1>UHI Skill Share</h1>
+      <p>You're offline</p>
+    </div>
   </body>
 </html>
